fixed overflow issue

--- a/styles/css/complete.css
+++ b/styles/css/complete.css
@@ -118,8 +118,11 @@ div.heading2 h2 {
 }
 
 header {
-  width: calc(100vw - 6rem);
-  margin: 0 3rem;
+  width: 100svw;
+  margin: 1rem 0;
+  padding: 0 2rem;
+  background-color: var(--bgrDark);
+  border-radius: 5rem;
   display: flex;
   justify-content: space-between;
   position: fixed;
@@ -138,7 +141,7 @@ header {
 header + a, header svg {
   z-index: 2;
   position: relative;
-  margin: 1.3rem 0;
+  margin: 1rem 0;
 }
 header #Group_13 path:first-child {
   fill: var(--bgrLight);
@@ -149,7 +152,7 @@ header #Group_13 text {
 header #menu {
   position: absolute;
   top: 2rem;
-  right: 0rem;
+  right: 2rem;
   z-index: 2;
   height: 1.6rem;
   background-color: transparent;
@@ -239,11 +242,12 @@ header #colorMode {
   justify-content: center;
   width: 100vw;
 }
+
 header #colorMode div {
-  display: flex;
   position: fixed;
   bottom: 5rem;
   z-index: 999;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -302,16 +306,25 @@ main .introText h1 span {
 main .introText p {
   order: 3;
 }
-main .introText img {
-  order: 1;
-  transform: rotate(20deg);
-  max-width: 8rem;
+main .introText .container {
   position: absolute;
+  width: 9rem;
+  height: 10rem;
+  top: 8rem;
+  right: 0;
   overflow: hidden;
-  top: 6rem;
-  right: -2.5rem;
-  z-index: 0;
+  z-index: -1;
 }
+
+main .introText .container img {
+  width: 100%;
+  height: 100%;
+  transform: rotate(20deg) translate(2rem, -1rem);
+  /* right: -5.5rem; */
+  position: absolute;
+
+}
+
 main .introText .ctaIntro {
   order: 4;
   display: flex;
